--- a/resume/templates/index.html
+++ b/resume/templates/index.html
@@ -1,6 +1,6 @@
 ﻿<html lang="en" class=" dk_fouc dk_fouc"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>Welcome to HMQI's Site</title>
+<title>Welcome to HUMQ's Site</title>
 <meta name="keywords" content="Your keywords here">
 <meta name="description" content="Your description">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
